// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assert.macro - enabled Keep and rewrite import if used: Keep and rewrite import if used 1`] = `

import assert from '../dist/assert.macro';

function doSomething(val) {
  assert(val > 0, 'Custom error message');
}

      ↓ ↓ ↓ ↓ ↓ ↓

const assert = require("assert.macro/impl");

function doSomething(val) {
  assert(val > 0, "Custom error message");
}


`;

exports[`assert.macro - enabled Remove import if unused: Remove import if unused 1`] = `

import assert from '../dist/assert.macro';

      ↓ ↓ ↓ ↓ ↓ ↓



`;
